# FraudBench

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements-colab.txt  test_dataset_manual.py
.claude/: settings.local.json
attacks/: art_wrapper.py  capgd.py  constrained_capgd.py  constraints_np.py  hopskipjump.py  square.py
configs/: ccfd.yaml  ccfd_adv_train.yaml  ccfd_ensemble.yaml  ccfd_ensemble_square.yaml  ccfd_eps005.yaml  ccfd_eps020.yaml  ccfd_eps_sweep.yaml  ccfd_input_val.yaml  ccfd_input_val_z10.yaml  ccfd_input_val_z5.yaml  ccfd_quick.yaml  ccfd_tree.yaml  ccfd_tree_adv_train.yaml  ccfd_tree_hsj.yaml  ccfd_tree_input_val.yaml  ccfd_tree_input_val_z10.yaml  ccfd_tree_input_val_z5.yaml  ccfd_tree_square.yaml  ieee_cis.yaml  ieee_cis_adv_train.yaml  ieee_cis_ensemble.yaml  ieee_cis_ensemble_square.yaml  ieee_cis_eps_sweep.yaml  ieee_cis_input_val.yaml  ieee_cis_neural.yaml  ieee_cis_tree_hsj.yaml  ieee_cis_tree_input_val.yaml  ieee_cis_tree_square.yaml  lcld.yaml  lcld_adv_train.yaml  lcld_ensemble.yaml  lcld_ensemble_square.yaml  lcld_eps_sweep.yaml  lcld_input_val.yaml  lcld_tree.yaml  lcld_tree_hsj.yaml  lcld_tree_input_val.yaml  lcld_tree_square.yaml  mvp.yaml  sparkov.yaml  (+13 more)
constraints/: feasibility.py  masks.py  schema.py  validator.py
datasets/: loader.py  splitter.py
defences/: adversarial_training.py  ensemble.py  input_validation.py
docs/: AGENTS.md  Context.md  FIX_DOCUMENT.md  FraudBench_Current_Issues.md  FraudBench_Remaining_Tasks.md  FraudBench_Remaining_Work.md  FraudBench_Thesis_ICAIF_Plan.md  Init_plan.md  MVP_Supplement_ToDo.md  ToDo.md  colab_setup_plan.md  constraint_evaluation_guidance.md  cross_dataset_feasibility_findings.md  figure_claim_audit_report.md  figure_data_audit_report.md  figure_provenance_audit.md  g1_projection_findings.md  icdm_experiment_spec_v3.md  ieee_ohe_projection_findings.md  mask_ablation_findings.md  tabularbench_comparison_experiment_plan.md  tabularbench_comparison_findings.md  thesis_figure_integration_audit.md
evaluation/: metrics.py  registry.py
models/: base.py  neural.py  tree.py
notebooks/: colab_debug.ipynb  colab_runner.ipynb  cross_dataset_feasibility.ipynb  g1_projection_attack.ipynb  icdm_capgd_protocol_grid.ipynb  icdm_consolidate_and_diagnose.ipynb  icdm_square_model_family.ipynb  ieee_cis_ohe_projection_attack.ipynb  mask_ablation.ipynb  open_in_colab.md  tabularbench_comparison.ipynb  tabularbench_metric_analysis.ipynb
preprocessing/: processor.py
results/: 20260216_GPU_only_registry.csv  20260221_ensemble_registry.csv  registry.csv  registry_clean.csv
runner/: run.py
scratch/: diagnose_clean_breakdown.py  diagnose_g3_baseline.py  diagnose_g3_pipeline.py  diagnose_m1_leak.py  diagnose_seed42.py
scripts/: analyse_adv_training.py  analyse_input_validation.py  analyse_z_threshold.py  audit_figure_data.py  generate_figures.py  generate_leaderboards.py  prepare_drive_data.py  run_all_seeds.py  run_ensemble_experiments.py  run_local_trees.py  run_remaining_hsj.py  run_z_threshold_sweep.py  statistical_tests.py  transferability.py
tests/: test_art_attacks.py  test_attacks.py  test_constrained_capgd.py  (+12 more)
(+55 files in other folders)
