[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["attacks*", "constraints*", "datasets*", "defences*", "evaluation*", "models*", "preprocessing*", "runner*", "scripts*"]

[project]
name = "frbs"
version = "0.1.0"
description = "Fraud-Robust Benchmark Suite: Adversarial robustness evaluation for fraud detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "xgboost>=3.1.2",
    "adversarial-robustness-toolbox>=1.18.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["notebooks/"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # line too long — handled by formatter, not linter
    "E731",  # lambda assignments — common in data science
    "W291",  # trailing whitespace — handled by formatter
    "W292",  # no newline at end of file — handled by formatter
    "W293",  # whitespace before ':' — handled by formatter
]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
